challenge make the card rotation feature clickable

--- a/Counter/Challenge/style.css
+++ b/Counter/Challenge/style.css
@@ -43,9 +43,9 @@ section::after {
   transition: 0.6s;
   transform-style: preserve-3d;
 }
-.container:hover {
+/* .container:hover {
   transform: rotateY(180deg);
-}
+} */
 .container .card {
   position: absolute;
   height: 100%;
