--- a/Counter/Challenge/style.css
+++ b/Counter/Challenge/style.css
@@ -12,6 +12,7 @@ section {
   width:100%;
   background: #121321;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   color: #fff;
@@ -137,4 +138,50 @@ h5.name {
 .card.back-face h5 {
   font-size: 8px;
   margin-top:  15px;
+}
+.button-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20%;
+}
+.btns {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  padding: 25px;
+  border-radius: 25px;
+  backdrop-filter: blur(25px);
+  background: transparent;
+  box-shadow: 0 25px 45px rgba(0,0,0,0.25);
+  border:1px solid rgba(255,255,255,0.1);
+}
+
+.btn {
+  text-transform: uppercase;
+  background: transparent;
+  color: var(--clr-black);
+  padding: 0.375rem 0.75rem;
+  letter-spacing: var(--spacing);
+  display: inline-block;
+  transition: var(--transition);
+  font-size: 0.875rem;
+  border: 2px solid var(--clr-black);
+  cursor: pointer;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  border-radius: var(--radius);
+  margin: 0.5rem;
+}
+.btn:hover {
+  color: var(--clr-white);
+  background: var(--clr-black);
+}
+.decrease {
+  color:red;
+}
+.increase {
+  color:green;
+}
+.reset {
+  color:#000;
 }
