--- a/Counter/Challenge/style.css
+++ b/Counter/Challenge/style.css
@@ -151,7 +151,7 @@ h5.name {
   width: 100%;
   padding: 25px;
   border-radius: 25px;
-  backdrop-filter: blur(25px);
+  /* backdrop-filter: blur(25px); */
   background: transparent;
   box-shadow: 0 25px 45px rgba(0,0,0,0.25);
   border:1px solid rgba(255,255,255,0.1);
