--- a/questions/challenge/style.css
+++ b/questions/challenge/style.css
@@ -12,6 +12,7 @@
   background-size: cover;
   height: 100vh;
   width: 100%;
+  z-index:10;
 }
 .main_box .sidebar_menu{
   position: fixed;
@@ -127,4 +128,54 @@
 .selected{
   border-left: 1px solid #fff;
   box-shadow: 0 0 4px rgba(255,255,255,0.5);
+}
+.question-text {
+  display: none;
+}
+p {
+  color:red;
+}
+
+
+/* modal */
+body.active-modal {
+  overflow-y: hidden;
+}
+.modal, .overlay {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  z-index:11;
+  visibility: hidden;
+}
+.visible {
+  visibility:visible;
+}
+.overlay {
+  background: rgba(215, 12, 12, 0.8);
+}
+.modal-content {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 1.4;
+  background: #f1f1f1;
+  padding: 14px 28px;
+  border-radius: 3px;
+  max-width: 600px;
+  min-width: 300px;
+  min-height:300px;
+  z-index: 12;
+}
+
+.close-modal {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  padding: 5px 7px;
 }
